[gd_scene load_steps=3 format=3 uid="uid://dga3u0pbhej4u"]

[ext_resource type="Script" path="res://objects/interactable/interactable.gd" id="1_wb4i6"]
[ext_resource type="PackedScene" uid="uid://73jm5qjy52vq" path="res://objects/dialogue_balloon/balloon.tscn" id="2_th4gk"]

[node name="Interactable" type="Area2D"]
process_mode = 3
script = ExtResource("1_wb4i6")

[node name="Balloon" parent="." instance=ExtResource("2_th4gk")]
visible = false

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="center_node" from="Balloon" to="." method="_on_balloon_center_node"]
